change from english to latvian

--- a/templates/database.html
+++ b/templates/database.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Database{% endblock %}
+{% block title %}Datubāze{% endblock %}
 
 {% block content %}
     {% if no_data %}
