--- a/templates/predict.html
+++ b/templates/predict.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Predict Rating{% endblock %}
+{% block title %}Prognozēt reitingu{% endblock %}
 
 {% block content %}
     {% if no_data %}
