--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Upload CSV{% endblock %}
+{% block title %}Augšupielādēt CSV{% endblock %}
 
 {% block content %}
     <h1>Augšupielādējiet filmas datus</h1>
