--- a/templates/visualizations.html
+++ b/templates/visualizations.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Visualizations{% endblock %}
+{% block title %}Vizualizācijas{% endblock %}
 
 {% block content %}
     {% if no_data %}
