--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Home{% endblock %}
+{% block title %}Mājas{% endblock %}
 
 {% block content %}
     <h1>Welcome to the Filmu Vertējumu Dashboard</h1>
